--- a/src/translations/polish.json
+++ b/src/translations/polish.json
@@ -19,7 +19,7 @@
       "Rozpoczynanie kopania...",
       "Próba",
       "Porażka dla",
-      "Suckes dla",
+      "Sukces dla",
       "Poziom trudności kopania zwiększony. "
     ],
     "buttons": [
