--- a/src/translations/polish.json
+++ b/src/translations/polish.json
@@ -3,8 +3,8 @@
     "mainHeader": "BlockchainSim",
     "header": ["Blockchain", "Blok", "Sieć"],
     "body": [
-      "Blockchain to jednokierunkowa lista rekordów nazywanych blokami. Bloki można dodawać jedynie na końcu listy, a każdy z nich jest pozwiązany z poprzednikiem przy pomocy funkcji haszującej.",
-      "Blok to podstawowy element składowy blockchain. Składa się z nagłówka zawierającego hasz zawartości poprzedniego bloku, korzeń drzewa haszy i nonce oraz danych zawierających zapis transakcji wykonanych w danym bloku.",
+      "Blockchain to rozproszona baza danych, która gromadzi informacje w grupy zwane blokami. Bloki mają ustaloną pojemność, a kiedy zostaną zapełnione informacjami są zamykane i powiązywane z poprzednio zamkniętym blokiem przy pomocy funkcji haszującej.",
+      "Blok to podstawowy element składowy blockchain. Składa się z nagłówka zawierającego takie informacje jak hasz poprzedniego bloku, korzeń drzewa haszy i nonce oraz zapisu transakcji wykonanych w danym bloku.",
       "Sieć blockchain często funkcjonuje w oparciu o architekturę peer-to-peer, w której wszystkie maszyny uczestniczące w wymianie danych w sieci komputerowej posiadają te same uprawnienia. "
     ]
   },
